Working proof-of-concept for the navigation system. Rough edges exist!